--- a/CipherConnectPro2/AndroidManifest.xml
+++ b/CipherConnectPro2/AndroidManifest.xml
@@ -39,14 +39,19 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SalveModeActivity"
+		    	  android:screenOrientation="portrait"
 		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SalveModeQRActivity"
+		     	  android:screenOrientation="portrait"
 		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.LEDeviceScanActivity"
+		     	  android:screenOrientation="portrait"
 		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.ClassicBTDeviceScanActivity"
+		     	  android:screenOrientation="portrait"
 		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.CipherConnectAboutActivity" android:label="@string/setting_about" 
+		          android:screenOrientation="portrait"
 		          android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
 	</application>
 
