--- a/BTScannerFWUpdateSdk/.project
+++ b/BTScannerFWUpdateSdk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CipherConnectPro2</name>
+	<name>BTScannerFWUpdateSdk</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -30,16 +30,4 @@
 		<nature>com.android.ide.eclipse.adt.AndroidNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
-	<linkedResources>
-		<link>
-			<name>sdk-gen</name>
-			<type>2</type>
-			<location>D:/Projects/CipherLab_Software_Android2/CipherConnectSolution_new/CipherConnectSDK/gen</location>
-		</link>
-		<link>
-			<name>src-sdk</name>
-			<type>2</type>
-			<location>D:/Projects/CipherLab_Software_Android2/CipherConnectSolution_new/CipherConnectSDK/src</location>
-		</link>
-	</linkedResources>
 </projectDescription>
