[What]Refine prj setting

--- a/BTScannerFWUpdateSdk/.project
+++ b/BTScannerFWUpdateSdk/.project
@@ -3,6 +3,7 @@
 	<name>BTScannerFWUpdateSdk</name>
 	<comment></comment>
 	<projects>
+		<project>CipherConnectPro2</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
