[What] Implement back button for backward API support

--- a/CipherConnectPro2/AndroidManifest.xml
+++ b/CipherConnectPro2/AndroidManifest.xml
@@ -39,20 +39,15 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SalveModeActivity"
-		    	  android:screenOrientation="portrait"
-		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
+		    	  android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SalveModeQRActivity"
-		     	  android:screenOrientation="portrait"
-		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
+		     	  android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.LEDeviceScanActivity"
-		     	  android:screenOrientation="portrait"
-		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
+		     	  android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.ClassicBTDeviceScanActivity"
-		     	  android:screenOrientation="portrait"
-		     	  android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
+		     	  android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.CipherConnectAboutActivity" android:label="@string/setting_about" 
-		          android:screenOrientation="portrait"
-		          android:parentActivityName="com.cipherlab.cipherconnectpro2.CipherConnectSettingActivity"/>
+		          android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SetInputMethod" android:label="@string/setting_setinput" 
 		          android:screenOrientation="portrait"/>
 	</application>
