--- a/CipherConnectPro2/AndroidManifest.xml
+++ b/CipherConnectPro2/AndroidManifest.xml
@@ -50,6 +50,8 @@
 		          android:screenOrientation="portrait"/>
 		<activity android:name="com.cipherlab.cipherconnectpro2.SetInputMethod" android:label="@string/setting_setinput" 
 		          android:screenOrientation="portrait"/>
+		<activity android:name="com.cipherlab.cipherconnectpro2.ScannerConfigBarcodePage" android:label="@string/setting_scanner_config" 
+		          android:screenOrientation="portrait"/>
 	</application>
 
 </manifest> 
