[What]Refine library

--- a/CipherConnect2SDK_EZMet/.project
+++ b/CipherConnect2SDK_EZMet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CipherConnectSDK</name>
+	<name>CipherConnect2SDK_EZMet</name>
 	<comment></comment>
 	<projects>
 		<project>CipherConnectPro2</project>
