--- a/CipherConnectPro2/project.properties
+++ b/CipherConnectPro2/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=android-22
-android.library.reference.1=../CipherConnectSDK
+android.library.reference.1=../CipherConnect2SDK_EZMet
